Changes in version 0.10.2:

* Use Memory BIO for faster and more compatible SSL implementation.
* Add support for Python 3.5.
* Move to new pyuv upstream (1.0.0-dev, using libuv 1.0.0-rc1).
* Improve test coverage.
* Remove non-standard method Queue.clear().
* Drop support for Python 2.6.
* Make futures thread-safe and add .cancel() method.
* Make Event() follow threading API for timeouts.
* New functions: wait(), as_completed()
* Store callbacks in a linked list for fast removal.
* Fix threading issues with timeouts for sync primitves.
* Add test coverage via coveralls.
* Add .alive property to Fiber.
* http: communicate connection_lost() to waiters.
* create_connection(): raise on callback error.
* Workaround for Windows build failure (link error 1104).

Changes in version 0.10.1:

* Re-release of 0.10.0 with correct README file.

Changes in version 0.10.0:

* PEP-3156 style transports and protocols.
* Incorporate SSL backports from Bluepass.
* Replace Signal with stdlib-like Event and Condition.
* Add support for working with child processes.
* Add support for connecting protocols to a file descriptor.
* Lots of small bug fixes and improvements.
* Improved documentation.

Changes in version 0.9.2:

* Add support for JSON-RPC v2.0
* Logger supports Python 2.7+ style docstrings on 2.6
* Lots of small bug fixes and some cleanups

Changes in version 0.9.1:

* Add thread-safe synchronization primitives.
* Add gruvi.futures.
* Test suite now uses unittest.
* Lots of smaller refactorings to make the API cleaner.
* Remove dependency on six.
* Switch from greenlet to python-fibers.
* Fixed Windows support.

Changes in version 0.9.0:

* Almost complete rewrite.
* First release of beta quality.